--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -15,13 +15,21 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         color: $white;
         padding: 0 24px;
+        height: 100%;
 
         .icon_wrapper {
             display: flex;
             align-items: center;
             gap: 16px;
+
+            a {
+                height: 100%;
+                display: flex;
+                align-items: center;
+            }
         }
     }
 }
